Fixed statements table

--- a/app/views/statement/index.html.erb
+++ b/app/views/statement/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Extrato</h1>
 <% if !@statements.empty? %>
-<div class="table>
+<div class="table">
     <table>
         <thead>
             <th>ID</th>
