--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           .replace( /^[0]+/, '' )
           .replace( /(\d+)(\d{2})$/, '$1,$2' )
           .replace( /(\d)(?=(\d{3})+\b)/g, '$1.' ) }`;
-          value.value = this.value.replace('.', '').replace(',', '.');
+          value.value = this.value.replaceAll('.', '').replace(',', '.');
           this.value = 'R$ '+this.value;
           submit = document.querySelector('input[type=submit]');
           if(submit != null) {
